--- a/playwright/index.html
+++ b/playwright/index.html
@@ -9,6 +9,6 @@
     <div id="root"></div>
     <script type="module" src="/playwright/envs.js"></script>
     <script type="module" src="/playwright/index.ts"></script>
-    <link rel="preload" as="image" href="/public/icons/sprite.svg"/>
+    <link rel="preload" as="image" href="'/icons/gr1d.svg';g"/>
   </body>
 </html>
